# polymarket-arb-scanner

./: .gitignore  Cargo.toml  LICENSE  README.md
exchanges/polymarket/: Cargo.toml
exchanges/polymarket/src/: constants.rs  endpoints.rs  indexer.rs  lib.rs  manager.rs
exchanges/polymarket/src/binary_market/: snapshot.rs
exchanges/polymarket/src/clob/: auth.rs  client.rs  constants.rs  internal_event.rs  message.rs  mod.rs  ws_client.rs
exchanges/polymarket/src/event/: event.rs  manager.rs
exchanges/polymarket/src/gamma/: client.rs  constants.rs
exchanges/polymarket/src/market/: market.rs
exchanges/polymarket/src/orderbook/: constants.rs  manager.rs  mod.rs  orderbook.rs  utils.rs
exchanges/polymarket/src/serie/: serie.rs
main/: Cargo.toml
main/src/: app.rs  constants.rs  main.rs  telemetry.rs
strategy/: Cargo.toml
strategy/src/: constants.rs  lib.rs  scout.rs
