[workspace]
resolver = "2"
members = ["main", "exchanges/polymarket", "strategy"]

[workspace.dependencies]
anyhow = "1.0"
tokio = { version = "1.40", features = ["full"] }
dotenv = "0.15"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
polymarket = { path = "exchanges/polymarket" }
strategy = { path = "strategy" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "registry"] }
tracing-appender = "0.2"
