[package]
name = "polymarket"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.1.1", features = ["full", "node-bindings"] }
alloy-sol-types = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
phf = { version = "0.11", features = ["macros"] }
dotenv = "0.15"
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
tungstenite = "0.24"
futures-util = "0.3"
url = "2.5.0"
chrono = "0.4"
futures = "0.3"
tracing.workspace = true
tracing-subscriber.workspace = true

[lib]
name = "polymarket"
path = "src/lib.rs"
